--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "basiclightbox": "^5.0.4",
-    "fslightbox-react": "^1.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -43,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "@types/basiclightbox": "^5.0.1",
-    "@types/fslightbox-react": "^1.4.1"
+    "@types/basiclightbox": "^5.0.1"
   }
 }
