--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "rellax": "^1.12.1",
+    "swiper": "^6.8.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -42,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@types/basiclightbox": "^5.0.1"
+    "@types/basiclightbox": "^5.0.1",
+    "@types/rellax": "^1.7.4",
+    "@types/swiper": "^5.4.3"
   }
 }
